crates/rome_cli/tests/snapshots/main_cases_config_extends/extends_should_raise_an_error_for_unresolved_configuration.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{ "extends": ["formatTYPO.json", "linter.json"] }
```

## `format.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `linter.json`

```json
{ "linter": { "enabled": false } }
```

## `test.js`

```js
debugger; console.log("string"); 
```

# Termination Message

```block
formatTYPO.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × path "formatTYPO.json" does not exists in memory filesystem
  
  Verbose advice
  
    i Biome tried to load the configuration file  using formatTYPO.json as base path.
    


```


